--- a/index.html
+++ b/index.html
@@ -1,113 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ilham Majid Zaiman</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <!-- online bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- local bootstrap -->
-    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
-    <!-- <link rel="stylesheet" href="bootstrap/icons/font/bootstrap-icons.css"> -->
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ilham Majid Zaiman</title>
+        <link rel="shortcut icon" href="image/imz.svg" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+        <!-- local bootstrap -->
+        <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
+        <!-- <link rel="stylesheet" href="bootstrap/icons/font/bootstrap-icons.css"> -->
+        <!-- online bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <style>
+            body {
+                font-family: 'Inter', sans-serif;
+            }
+        </style>
+    </head>
 
-<body id="home" class="bg-light py-5">
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm bg-white text-dark bg-opacity-75"
-        aria-label="Offcanvas navbar large">
-        <div class="container py-1">
-            <a href="index.html" class="navbar-brand d-flex align-items-center">
-                <img src="image/laravel.svg" alt="Logo" height="50" class="d-inline-block align-text-top me-3">
-                Ilham Majid Zaiman
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2"
-                aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end text-bg-light bg-opacity-100" tabindex="-1" id="offcanvasNavbar2"
-                aria-labelledby="offcanvasNavbar2Label">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbar2Label">
-                        Menu
-                    </h5>
-                    <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
-                        aria-label="Close">
-                    </button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 text-capitalize">
-                        <li class="nav-item">
-                            <a href="#home" class="nav-link ">
-                                Home
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#about" class="nav-link">
-                                About
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#contac" class="nav-link">
-                                About
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-
-
-    <section class="container my-5">
-        <div class="row flex-lg-row-reverse align-items-center">
-            <div class="col-sm-12 col-lg-6">
-                <img src="image/default-img.svg" class="mx-auto img-fluid w-100" />
-            </div>
-            <div class="col-sm-12 col-lg-6">
-                <div class="text-center text-lg-start py-5">
-                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
-                        Ilham Majid Zaiman
-                    </h1>
-                    <p class="lead">Web Developer</p>
-                    <button type="button" class="btn btn-primary btn-lg ">
-                        Contac Me
-                    </button>
+    <body id="home" class="bg-light pt-5">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm bg-white text-dark bg-opacity-75"
+            aria-label="Offcanvas navbar large">
+            <div class="container py-1">
+                <a href="/" class="navbar-brand d-flex align-items-center">
+                    <img src="image/imz.svg" alt="Logo" height="35" class="d-inline-block align-text-top me-3">
+                    Ilham Majid Zaiman
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-light bg-opacity-100" tabindex="-1" id="offcanvasNavbar2"
+                    aria-labelledby="offcanvasNavbar2Label">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbar2Label">
+                            Menu
+                        </h5>
+                        <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
+                            aria-label="Close">
+                        </button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 text-capitalize">
+                            <li class="nav-item">
+                                <a href="#home" class="nav-link ">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#about" class="nav-link">
+                                    About
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#contac" class="nav-link">
+                                    About
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </nav>
 
-    <footer class="container py-5">
-        <div class="text-center">
-            <small class="text-secondary">
-                ilhammajidzaiman.github.io
-                &copy;
-                <span id="year"></span>
-            </small>
-        </div>
-    </footer>
+        <section class="container my-5 py-5">
+            <div class="row flex-lg-row-reverse align-items-center">
+                <div class="col-sm-12 col-lg-6">
+                    <img src="image/default-img.svg" class="mx-auto img-fluid w-100" />
+                </div>
+                <div class="col-sm-12 col-lg-6">
+                    <div class="text-center text-lg-start py-5">
+                        <h1 class="display-5 fw-medium lh-1 mb-3">
+                            Ilham Majid Zaiman
+                        </h1>
+                        <p class="leadd fs-5 fw-light text-secondary mb-3">Web Developer</p>
+                        <a href="#contac" class="btn btn-primary btn-lg ">
+                            Contac Me
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <!-- online bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- local bootstrap -->
-    <!-- <script src="bootstrap/js/bootstrap.bundle.min.js"></script> -->
+        <footer class="container py-5">
+            <div class="text-center">
+                <small class="text-secondary">
+                    <a href="/"
+                        class="text-reset link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover">
+                        ilhammajidzaiman.github.io
+                    </a>
+                    &copy;
+                    <span id="year"></span>
+                </small>
+            </div>
+        </footer>
 
-    <script>
-        const d = new Date();
-        let year = d.getFullYear();
-        document.getElementById("year").innerHTML = year;
-    </script>
-</body>
+        <!-- local bootstrap -->
+        <!-- <script src="bootstrap/js/bootstrap.bundle.min.js"></script> -->
+        <!-- online bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+        <script>
+            const date = new Date();
+            let year = date.getFullYear();
+            document.getElementById("year").innerHTML = year;
+        </script>
+    </body>
 
 </html>
