--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:url" content="https://ilhammajidzaiman.github.io" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Ilham Majid Zaiman Portfolio" />
+        <meta
+            property="og:description"
+            content="Hi, I am Ilham Majid Zaiman, I am a programmer, Let’s discuss about an project!"
+        />
+        <meta property="og:image" content="assets/image/thumbnail.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            property="twitter:domain"
+            content="https://ilhammajidzaiman.github.io"
+        />
+        <meta
+            property="twitter:url"
+            content="https://ilhammajidzaiman.github.io"
+        />
+        <meta name="twitter:title" content="Ilham Majid Zaiman Portfolio" />
+        <meta name="twitter:image" content="assets/image/thumbnail.jpg" />
+
         <title>Ilham Majid Zaiman</title>
         <link
             rel="shortcut icon"
