--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:url" content="https://ilhammajidzaiman.github.io" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Ilham Majid Zaiman Portfolio" />
@@ -41,9 +43,9 @@
             href="assets/bootstrap/icons/font/bootstrap-icons.css"
         />
 
-        <link href="/assets/fontawesome/css/fontawesome.css" rel="stylesheet" />
-        <link href="/assets/fontawesome/css/brands.css" rel="stylesheet" />
-        <link href="/assets/fontawesome/css/solid.css" rel="stylesheet" />
+        <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.css" />
+        <link rel="stylesheet" href="/assets/fontawesome/css/brands.css" />
+        <link rel="stylesheet" href="/assets/fontawesome/css/solid.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
 
@@ -117,8 +119,10 @@
             </div>
         </nav>
 
-        <section class="container pt-5">
-            <div class="row g-3 pt-5 flex-lg-row-reverse align-items-center">
+        <section class="container py-5">
+            <div
+                class="row g-3 mt-5 pt-5 flex-lg-row-reverse align-items-center"
+            >
                 <div class="col-sm-12 col-lg-6">
                     <img
                         src="assets/image/avatar.jpg"
@@ -144,7 +148,7 @@
             </div>
         </section>
 
-        <section id="about" class="container pt-5">
+        <section id="about" class="container py-5">
             <div class="row g-3 my-5">
                 <div class="col-12">
                     <h3 class="text-center">About Me</h3>
@@ -258,7 +262,7 @@
             </div>
         </section>
 
-        <section id="service" class="container">
+        <section id="service" class="container py-5">
             <div class="row g-3 my-5">
                 <div class="col-12">
                     <h3 class="text-center">Service</h3>
@@ -314,7 +318,7 @@
             </div>
         </section>
 
-        <section id="tech" class="container">
+        <section id="tech" class="container py-5">
             <div class="row g-3 my-5">
                 <div class="col-12">
                     <h3 class="text-center">Technologies</h3>
@@ -400,7 +404,7 @@
             </div>
         </section>
 
-        <section id="project" class="container">
+        <section id="project" class="container py-5">
             <div class="row g-3 my-5 flex-lg-row-reverse align-items-center">
                 <div class="col-12">
                     <h3 class="text-center">Project</h3>
@@ -446,12 +450,14 @@
             </div>
         </section>
 
-        <section id="contact" class="container">
-            <div class="row g-3 my-5">
-                <div class="col-sm-12 col-lg-6">
-                    <h3>Get in touch</h3>
-                    <p>Let’s discuss about an project!</p>
-                    <p class="mb-5">
+        <section id="contact" class="container py-5">
+            <div
+                class="row g-3 mt-5 flex-lg-row-reverse justify-content-center"
+            >
+                <div class="col-sm-12 col-lg-4">
+                    <h3 class="fs-4">Get in touch</h3>
+                    <p class="fs-5">Let’s discuss about an project!</p>
+                    <p class="fs-5 mb-5">
                         Feel free to get in touch with me. I am always open to
                         discussing new projects, creative ideas or opportunities
                         to be part of your visions.
@@ -482,83 +488,160 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-lg-6">
-                    <div class="card border-0 shadow-sm">
-                        <div class="card-body">
-                            <div class="mb-3">
-                                <label for="name" class="form-label"
-                                    >Name</label
-                                >
-                                <input
-                                    type="text"
-                                    name="name"
-                                    id="name"
-                                    class="form-control"
-                                />
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label"
-                                    >Email</label
-                                >
-                                <input
-                                    type="email"
-                                    name="email"
-                                    id="email"
-                                    class="form-control"
-                                />
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label"
-                                    >Message</label
-                                >
-                                <textarea
-                                    name="message"
-                                    id="message"
-                                    rows="5"
-                                    class="form-control"
-                                ></textarea>
-                            </div>
-                            <button
-                                type="submit"
-                                id="submit"
-                                class="btn btn-primary"
-                            >
-                                <i id="icon" class="bi bi-send me-2"></i>
-                                Submit
-                            </button>
-                        </div>
+                <div class="col-sm-12 col-lg-4">
+                    <a
+                        href=""
+                        class="navbar-brand d-flex align-items-center mb-2"
+                    >
+                        <img
+                            src="assets/image/imz.svg"
+                            alt="Logo"
+                            height="75"
+                            class="d-inline-block align-text-center me-3"
+                        />
+                    </a>
+                    <div class="text-secondary fs-5">
+                        <a
+                            href=""
+                            class="text-reset link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover"
+                        >
+                            ilhammajidzaiman.github.io
+                        </a>
                     </div>
+                    <div class="text-secondary fs-5">
+                        &copy;
+                        <span id="year"></span>
+                    </div>
+                    <nav class="mt-5">
+                        <p class="text-secondary">Share:</p>
+                        <button
+                            onclick="whatsapp()"
+                            type="button"
+                            class="btn btn-outline-secondary"
+                        >
+                            <i class="rounded-circle bi bi-whatsapp fs-4"></i>
+                        </button>
+                        <button
+                            onclick="facebook()"
+                            type="button"
+                            class="btn btn-outline-secondary"
+                        >
+                            <i class="rounded-circle bi bi-facebook fs-4"></i>
+                        </button>
+                        <button
+                            onclick="twitter()"
+                            type="button"
+                            class="btn btn-outline-secondary"
+                        >
+                            <i class="rounded-circle bi bi-twitter-x fs-4"></i>
+                        </button>
+                        <button
+                            onclick="telegram()"
+                            type="button"
+                            class="btn btn-outline-secondary"
+                        >
+                            <i class="rounded-circle bi bi-telegram fs-4"></i>
+                        </button>
+                        <button
+                            onclick="copyLink()"
+                            type="button"
+                            class="btn btn-outline-secondary"
+                        >
+                            <i class="rounded-circle bi bi-copy fs-4"></i>
+                        </button>
+                    </nav>
                 </div>
             </div>
         </section>
 
-        <footer class="container pb-5">
-            <div class="text-center">
-                <small class="text-secondary">
-                    <a
-                        href=""
-                        class="text-reset link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover"
-                    >
-                        ilhammajidzaiman.github.io
-                    </a>
-                    &copy;
-                    <span id="year"></span>
-                </small>
-            </div>
-        </footer>
-
-        <!-- local bootstrap -->
         <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- online bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
         <script src="assets/js/masonry.pkgd.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
 
         <script>
             const date = new Date();
             let year = date.getFullYear();
             document.getElementById("year").innerHTML = year;
+
+            let width = 600;
+            let height = 400;
+
+            function facebook() {
+                let left = window.innerWidth / 2 - width / 2;
+                let top = window.innerHeight / 2 - height / 2;
+                const url = "https://ilhammajidzaiman.github.io";
+                const api = "https://www.facebook.com/sharer/sharer.php?u=";
+                const navUrl = api + url;
+                window.open(
+                    navUrl,
+                    "_blank",
+                    "width=" +
+                        width +
+                        ",height=" +
+                        height +
+                        ",left=" +
+                        left +
+                        ",top=" +
+                        top
+                );
+            }
+
+            function whatsapp() {
+                const url = "https://ilhammajidzaiman.github.io";
+                const api = "whatsapp://send?text=" + url;
+                const navUrl = api + url;
+                window.open(navUrl);
+            }
+
+            function twitter() {
+                let left = window.innerWidth / 2 - width / 2;
+                let top = window.innerHeight / 2 - height / 2;
+                const url = "https://ilhammajidzaiman.github.io";
+                const api = "https://twitter.com/intent/tweet?text=";
+                const navUrl = api + url;
+                window.open(
+                    navUrl,
+                    "_blank",
+                    "width=" +
+                        width +
+                        ",height=" +
+                        height +
+                        ",left=" +
+                        left +
+                        ",top=" +
+                        top
+                );
+            }
+
+            function telegram() {
+                let left = window.innerWidth / 2 - width / 2;
+                let top = window.innerHeight / 2 - height / 2;
+                const url = "https://ilhammajidzaiman.github.io";
+                const api = "https://telegram.me/share/url?url=";
+                const navUrl = api + url;
+                window.open(
+                    navUrl,
+                    "_blank",
+                    "width=" +
+                        width +
+                        ",height=" +
+                        height +
+                        ",left=" +
+                        left +
+                        ",top=" +
+                        top
+                );
+            }
+
+            function copyLink() {
+                const url = "{{ $share }}";
+                const textarea = document.createElement("textarea");
+                textarea.value = url;
+                document.body.appendChild(textarea);
+                textarea.select();
+                document.execCommand("copy");
+                document.body.removeChild(textarea);
+                alert("Tautan berhasil disalin");
+            }
         </script>
     </body>
 </html>
