--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:url" content="https://ilhammajidzaiman.github.io" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Ilham Majid Zaiman Portfolio" />
@@ -12,23 +10,15 @@
             property="og:description"
             content="Hi, I am Ilham Majid Zaiman, I am a programmer, Let’s discuss about an project!"
         />
-        <meta property="og:image" content="assets/image/thumbnail.jpg" />
-        <meta name="twitter:card" content="summary_large_image" />
         <meta
-            property="twitter:domain"
-            content="https://ilhammajidzaiman.github.io"
+            property="og:image"
+            content="https://ilhammajidzaiman.github.io/assets/image/thumbnail.jpg"
         />
-        <meta
-            property="twitter:url"
-            content="https://ilhammajidzaiman.github.io"
-        />
-        <meta name="twitter:title" content="Ilham Majid Zaiman Portfolio" />
-        <meta name="twitter:image" content="assets/image/thumbnail.jpg" />
 
         <title>Ilham Majid Zaiman</title>
         <link
             rel="shortcut icon"
-            href="assets/image/imz.svg"
+            href="/assets/image/imz.svg"
             type="image/x-icon"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -37,16 +27,16 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
         <link
             rel="stylesheet"
-            href="assets/bootstrap/icons/font/bootstrap-icons.css"
+            href="/assets/bootstrap/icons/font/bootstrap-icons.css"
         />
 
         <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.css" />
         <link rel="stylesheet" href="/assets/fontawesome/css/brands.css" />
         <link rel="stylesheet" href="/assets/fontawesome/css/solid.css" />
-        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="/assets/css/style.css" />
     </head>
 
     <body id="home" class="bg-body-tertiaryy bg-light bg-light-subtlee pt-4">
@@ -554,8 +544,8 @@
             </div>
         </section>
 
-        <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/masonry.pkgd.min.js"></script>
+        <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/assets/js/masonry.pkgd.min.js"></script>
 
         <script>
             const date = new Date();
