--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:url" content="https://ilhammajidzaiman.github.io" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Ilham Majid Zaiman Portfolio" />
+        <meta property="og:title" content="Portfolio" />
         <meta
             property="og:description"
             content="Hi, I am Ilham Majid Zaiman, I am a programmer, Let’s discuss about an project!"
