--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@
                 </div>
                 <div class="col-sm-12 col-lg-6">
                     <div class="text-center text-lg-start">
-                        <h1 class="display-5 fw-medium lh-1 mb-3">
+                        <h1 class="fs-5 fw-light text-secondary">Hi, I am</h1>
+                        <h1 class="display-4 fw-medium lh-1">
                             Ilham Majid Zaiman
                         </h1>
-                        <p class="leadd fs-5 fw-light text-secondary mb-3">
+                        <h1 class="fs-5 fw-light text-secondary mb-5">
                             I am a programmer, Let’s discuss about an project!
-                        </p>
+                        </h1>
                         <a
                             href="#contact"
                             class="btn btn-outline-secondary btn-lg"
