--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Portfolio" />
         <meta
             property="og:description"
-            content="Hi, I am Ilham Majid Zaiman, I am a Programmer. Let’s discuss about an Project!"
+            content="Hi, I am Ilham Majid Zaiman. I am a Programmer. Let’s discuss about an Project!"
         />
         <meta
             property="og:image"
