FIX: tech, heading

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <section id="about" class="container py-5">
             <div class="row g-3 my-5">
                 <div class="col-12">
-                    <h3 class="text-center">About Me</h3>
+                    <h1 class="text-center fs-1">About Me</h1>
                 </div>
             </div>
             <div class="row g-3 justify-content-center mb-5 pb-5">
@@ -256,7 +256,7 @@
         <section id="service" class="container py-5">
             <div class="row g-3 my-5">
                 <div class="col-12">
-                    <h3 class="text-center">Service</h3>
+                    <h1 class="text-center fs-1">Service</h1>
                 </div>
             </div>
             <div class="row g-3">
@@ -312,11 +312,19 @@
         <section id="tech" class="container py-5">
             <div class="row g-3 my-5">
                 <div class="col-12">
-                    <h3 class="text-center">Technologies</h3>
+                    <h1 class="text-center fs-1">Technologies</h1>
                 </div>
             </div>
             <div class="row g-3 flex-lg-row-reverse justify-content-between">
                 <div class="col-sm-12 col-lg-5">
+                    <button class="btn btn-outline-secondary btn-lg mb-1">
+                        <i class="fa-brands fa-linux"></i>
+                        Linux
+                    </button>
+                    <button class="btn btn-outline-secondary btn-lg mb-1">
+                        <i class="fa-brands fa-ubuntu"></i>
+                        Ubuntu
+                    </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
                         <i class="fa-brands fa-html5"></i>
                         Html
@@ -341,16 +349,15 @@
                         Php
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
-                        <i class="fa-brands fa-node-js"></i>
-                        Node.js
-                    </button>
-                    <button class="btn btn-outline-secondary btn-lg mb-1">
                         <i class="fa-brands fa-laravel"></i>
                         Laravel
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
-                        <i class="fa-solid fa-fire"></i>
                         Codeigniter
+                    </button>
+                    <button class="btn btn-outline-secondary btn-lg mb-1">
+                        <i class="fa-brands fa-node-js"></i>
+                        Node.js
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
                         <i class="fa-solid fa-share-nodes"></i>
@@ -371,24 +378,16 @@
                     </button>
                 </div>
                 <div class="col-sm-12 col-lg-5">
-                    <div class="bg-secondary-subtle rounded-end-5 p-5 fs-5">
-                        <p>
+                    <div class="bg-secondary-subtle rounded-end-5 p-5">
+                        <p class="fs-5">
                             Here are some of the technologies I have mastered
                             for developing projects.
                         </p>
-                        <!-- <p class="py-3">
-                            We solve more complex problems with uniquely modern
-                            way that ensures the permanent resolution. It is a
-                            long established fact the the reader will be
-                            distracted.
-                        </p>
-                        <p>"Our project: Where Vision Comes to Life"</p>
-                        <p>We solve more complex problems uniquely modern</p> -->
-                        <blockquote class="blockquote">
-                            Make it Simple and elegant
+                        <blockquote class="blockquote mt-5">
+                            Behind the results there is a complicated process
                         </blockquote>
                         <figcaption class="blockquote-footer">
-                            Someone famous in
+                            Anonymous
                         </figcaption>
                     </div>
                 </div>
@@ -398,7 +397,7 @@
         <section id="project" class="container py-5">
             <div class="row g-3 my-5 flex-lg-row-reverse align-items-center">
                 <div class="col-12">
-                    <h3 class="text-center">Project</h3>
+                    <h1 class="text-center fs-1">Project</h1>
                 </div>
             </div>
             <div class="row g-3" data-masonry='{"percentPosition": true }'>
@@ -446,7 +445,7 @@
                 class="row g-3 mt-5 flex-lg-row-reverse justify-content-center"
             >
                 <div class="col-sm-12 col-lg-4">
-                    <h3 class="fs-4">Get in touch</h3>
+                    <h1 class="fs-1">Get in touch</h1>
                     <p class="fs-5">Let’s discuss about an project!</p>
                     <p class="fs-5 mb-5">
                         Feel free to get in touch with me. I am always open to
