FIX: tech, heading

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
                 <div class="col-sm-12 col-lg-4">
                     <a
-                        href=""
+                        href="#home"
                         class="navbar-brand d-flex align-items-center mb-2"
                     >
                         <img
