--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <link rel="stylesheet" href="/assets/css/style.css" />
     </head>
 
-    <body id="home" class="bg-body-tertiaryy bg-light bg-light-subtlee pt-4">
+    <body id="home" class="bg-body-tertiary bg-lightt bg-light-subtlee pt-md-5">
         <nav
             class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm bg-white text-dark bg-opacity-75"
             aria-label="Offcanvas navbar large"
@@ -109,18 +109,18 @@
             </div>
         </nav>
 
-        <section class="container py-5">
+        <section class="container pb-5">
             <div
-                class="row g-3 mt-5 pt-5 flex-lg-row-reverse align-items-center"
+                class="row g-3 mt-5 pt-5 flex-md-row-reverse align-items-center"
             >
-                <div class="col-sm-12 col-lg-6">
+                <div class="col-sm-12 col-md-4 col-lg-6">
                     <img
                         src="assets/image/avatar.jpg"
                         class="mx-auto img-fluid w-100 rounded-start-circle"
                     />
                 </div>
-                <div class="col-sm-12 col-lg-6">
-                    <div class="text-center text-lg-start">
+                <div class="col-sm-12 col-md-8 col-lg-6">
+                    <div class="text-center text-md-start">
                         <h1 class="fs-5 fw-light text-secondary">Hi, I am</h1>
                         <h1 class="display-4 fw-medium lh-1">
                             Ilham Majid Zaiman
