--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <link rel="stylesheet" href="/assets/css/style.css" />
     </head>
 
-    <body id="home" class="bg-body-tertiary bg-lightt bg-light-subtlee pt-md-5">
+    <body id="home" class="bg-body-tertiary bg-lightt bg-light-subtlee pt-5">
         <nav
             class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm bg-white text-dark bg-opacity-75"
             aria-label="Offcanvas navbar large"
