--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
         <meta property="og:title" content="Portfolio" />
         <meta
             property="og:description"
-            content="Hi, I am Ilham Majid Zaiman. I am a Programmer. Let’s discuss about an Project!"
+            content="Hi, I am Ilham Majid Zaiman. I am a Programmer. Let's discuss about an Project!"
         />
         <meta
             property="og:image"
             content="https://ilhammajidzaiman.github.io/assets/image/thumbnail.jpg"
         />
-
         <title>Ilham Majid Zaiman</title>
         <link
             rel="shortcut icon"
@@ -32,19 +31,15 @@
             rel="stylesheet"
             href="/assets/bootstrap/icons/font/bootstrap-icons.css"
         />
-
         <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.css" />
         <link rel="stylesheet" href="/assets/fontawesome/css/brands.css" />
         <link rel="stylesheet" href="/assets/fontawesome/css/solid.css" />
         <link rel="stylesheet" href="/assets/css/style.css" />
     </head>
 
-    <body id="home" class="bg-body-tertiary bg-lightt bg-light-subtlee pt-5">
-        <nav
-            class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm bg-white text-dark bg-opacity-75"
-            aria-label="Offcanvas navbar large"
-        >
-            <div class="container py-1">
+    <body id="home" class="bg-body-tertiary">
+        <nav class="navbar navbar-expand-md fixed-top text-dark fw-medium m-2">
+            <div class="container px-4 py-2 bg-white shadow rounded-pill">
                 <a href="" class="navbar-brand d-flex align-items-center">
                     <img
                         src="assets/image/imz.svg"
@@ -109,33 +104,44 @@
             </div>
         </nav>
 
-        <section class="container pb-5">
-            <div
-                class="row g-3 mt-5 pt-5 flex-md-row-reverse align-items-center"
-            >
-                <div class="col-sm-12 col-md-4 col-lg-6">
-                    <img
-                        src="assets/image/avatar.jpg"
-                        class="mx-auto img-fluid w-100 rounded-start-circle"
-                    />
-                </div>
-                <div class="col-sm-12 col-md-8 col-lg-6">
-                    <div class="text-center text-md-start">
-                        <h1 class="fs-5 fw-light text-secondary">Hi, I am</h1>
-                        <h1 class="display-4 fw-medium lh-1">
-                            Ilham Majid Zaiman
-                        </h1>
-                        <h1 class="fs-5 fw-light text-secondary mb-4">
-                            I am a Programmer. Let’s discuss about an Project!
-                        </h1>
-                        <a
-                            href="#contact"
-                            class="btn btn-outline-secondary btn-lg"
-                        >
-                            Contac Me
-                        </a>
+        <section class="d-flex h-100 flex-column hero">
+            <div class="my-auto">
+                <section class="container">
+                    <div
+                        class="row justify-content-between flex-md-row-reverse align-items-center"
+                    >
+                        <div class="col-md-5">
+                            <img
+                                src="assets/image/avatar.jpg"
+                                class="img-fluid w-100 rounded-start-circle pb-3"
+                                alt="logo"
+                                loading="lazy"
+                            />
+                        </div>
+                        <div class="col-md-6">
+                            <div class="text-center text-md-start">
+                                <h1 class="display-5 text-secondary">
+                                    Hi, I am
+                                </h1>
+                                <h1
+                                    class="display-5 fw-bold lh-1 mb-3 text-primary-emphasis"
+                                >
+                                    Ilham Majid Zaiman.
+                                </h1>
+                                <p class="leads fs-5">
+                                    I am a Programmer. Let’s discuss about an
+                                    Project!
+                                </p>
+                                <a
+                                    href="#contact"
+                                    class="btn btn-lg btn-outline-secondary"
+                                >
+                                    Contac Me
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </section>
             </div>
         </section>
 
