--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="col-md-5">
                             <img
                                 src="/src/assets/image/avatar.jpg"
-                                class="img-fluid w-100 rounded-start-circle pb-3"
+                                class="img-fluid w-100 rounded-start-circle pt-sm-5 pb-3"
                                 alt="logo"
                                 loading="lazy"
                             />
@@ -480,6 +480,7 @@
                 </div>
             </div>
         </section>
+
         <footer class="hero">
             <section id="contact" class="container py-5">
                 <div
