FIX: paddint top just on mobile

--- a/index.html
+++ b/index.html
@@ -117,12 +117,14 @@
                         class="row justify-content-between flex-md-row-reverse align-items-center"
                     >
                         <div class="col-md-5">
-                            <img
-                                src="/src/assets/image/avatar.jpg"
-                                class="img-fluid w-100 rounded-start-circle pt-sm-5 pb-3"
-                                alt="logo"
-                                loading="lazy"
-                            />
+                            <div class="mt-5 mt-sm-0">
+                                <img
+                                    src="/src/assets/image/avatar.jpg"
+                                    class="img-fluid w-100 rounded-start-circle mb-3"
+                                    alt="logo"
+                                    loading="lazy"
+                                />
+                            </div>
                         </div>
                         <div class="col-md-6">
                             <div class="text-center text-md-start">
