FEAT: add project list

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </section>
 
         <section id="about" class="container pt-5">
-            <div class="row g-3 justify-content-center pt-5">
+            <div class="row g-4 justify-content-center pt-5">
                 <h1
                     class="display-5 fw-bold text-primary-emphasis lh-1 text-center pt-5 pb-3"
                 >
@@ -291,13 +291,13 @@
         </section>
 
         <section id="service" class="container pt-5">
-            <div class="row g-3 pt-5">
+            <div class="row g-4 pt-5">
                 <h1
                     class="display-5 fw-bold text-primary-emphasis lh-1 text-center pt-5 pb-3"
                 >
                     Service.
                 </h1>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body">
                             <div class="text-center">
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body">
                             <div class="text-center">
@@ -321,7 +321,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body">
                             <div class="text-center">
@@ -331,7 +331,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body">
                             <div class="text-center">
@@ -348,7 +348,7 @@
 
         <section id="tech" class="container pt-5">
             <div
-                class="row g-3 flex-lg-row-reverse justify-content-between pt-5"
+                class="row g-4 flex-lg-row-reverse justify-content-between pt-5"
             >
                 <h1
                     class="display-5 fw-bold text-primary-emphasis lh-1 text-center pt-5 pb-3"
@@ -434,49 +434,122 @@
         </section>
 
         <section id="project" class="container pt-5">
-            <div class="row g-3 pt-5">
+            <div class="row g-4 pt-5">
                 <h1
                     class="display-5 fw-bold text-primary-emphasis lh-1 text-center pt-5 pb-3"
                 >
                     Project.
                 </h1>
             </div>
-            <div class="row g-3" data-masonry='{"percentPosition": true }'>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <a href="">
-                        <img
-                            src="/src/assets/image/default-img.svg"
-                            alt="image"
-                            class="w-100 rounded-2 bg-secondary-subtle"
-                        />
-                    </a>
+            <div class="row g-4" data-masonry='{"percentPosition": true }'>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card rounded-4 border-0 shadow-sm">
+                        <a
+                            href="/src/assets/image/project/simpeg.png"
+                            target="_blank"
+                        >
+                            <img
+                                src="/src/assets/image/project/thumbnail/simpeg.png"
+                                class="card-img-top rounded-4"
+                                alt="image"
+                            />
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a
+                                    href="https://simpeg.merantikab.go.id/"
+                                    target="_blank"
+                                    class="text-reset text-decoration-none"
+                                >
+                                    SIMPeg.
+                                </a>
+                            </h5>
+                            <p class="card-text fw-light">
+                                SIMPeg. adalah sistem informasi manajemen
+                                kepegawaian BKPSDM (Badan Kepegawaian dan
+                                Pengembangan Sumber Daya Manusia) dilingkungan
+                                Kabupaten Kepulauan Meranti.
+                            </p>
+                            <p class="card-text">
+                                <small class="text-body-secondary">
+                                    Laravel, Filamentphp, Bootstrap
+                                </small>
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <a href="">
-                        <img
-                            src="/src/assets/image/default-img.svg"
-                            alt="image"
-                            class="w-100 rounded-2 bg-secondary-subtle"
-                        />
-                    </a>
+
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card rounded-4 border-0 shadow-sm">
+                        <a
+                            href="/src/assets/image/project/wartawan.png"
+                            target="_blank"
+                        >
+                            <img
+                                src="/src/assets/image/project/thumbnail/wartawan.png"
+                                class="card-img-top rounded-4"
+                                alt="image"
+                            />
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a
+                                    href="http://e-wartawan.merantikab.go.id/"
+                                    target="_blank"
+                                    class="text-reset text-decoration-none"
+                                >
+                                    e-Wartawan
+                                </a>
+                            </h5>
+                            <p class="card-text fw-light">
+                                Aplikasi hitung poin kerja sama Media dan
+                                Pemerintah Kabupaten Kepulauan Meranti
+                            </p>
+                            <p class="card-text">
+                                <small class="text-body-secondary">
+                                    Laravel, AdminLTE, Bootstrap
+                                </small>
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <a href="">
-                        <img
-                            src="/src/assets/image/default-img.svg"
-                            alt="image"
-                            class="w-100 rounded-2 bg-secondary-subtle"
-                        />
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <a href="">
-                        <img
-                            src="/src/assets/image/default-img.svg"
-                            alt="image"
-                            class="w-100 rounded-2 bg-secondary-subtle"
-                        />
-                    </a>
+
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card rounded-4 border-0 shadow-sm">
+                        <a
+                            href="/src/assets/image/project/simpeg.png"
+                            target="_blank"
+                        >
+                            <img
+                                src="/src/assets/image/default-img.svg"
+                                class="card-img-top rounded-4"
+                                alt="image"
+                            />
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a
+                                    href="https://simpeg.merantikab.go.id/"
+                                    target="_blank"
+                                    class="text-reset text-decoration-none"
+                                >
+                                    Lorem ipsum dolor sit.
+                                </a>
+                            </h5>
+                            <p class="card-text fw-light">
+                                Lorem ipsum dolor sit amet consectetur,
+                                adipisicing elit. Laboriosam voluptatem magnam,
+                                architecto recusandae eveniet autem distinctio
+                                pariatur excepturi, vel voluptatum, enim
+                                repellat neque? Animi, totam!
+                            </p>
+                            <p class="card-text">
+                                <small class="text-body-secondary">
+                                    Laravel, Filamentphp, Bootstrap
+                                </small>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -484,7 +557,7 @@
         <footer class="hero">
             <section id="contact" class="container py-5">
                 <div
-                    class="row g-3 flex-lg-row-reverse justify-content-center pt-5"
+                    class="row g-4 flex-lg-row-reverse justify-content-center pt-5"
                 >
                     <div class="col-12 col-lg-4">
                         <h1
